Add a checkbox to the checkout form for updating billing info

--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -105,6 +105,10 @@
                                         >
                                     </label>
                                 </div>
+                                <label class="label CheckoutForm__Label CheckoutForm__Label--AlignRight">
+                                    Save Billing Info?
+                                    <input type="checkbox">
+                                </label>
                             </section>
                             <section class="CheckoutForm__Section">
                                 <h2 class="CheckoutForm__SectionHeader">Payment</h2>
