--- a/templates/_partials/CheckoutStateProvince.twig
+++ b/templates/_partials/CheckoutStateProvince.twig
@@ -1,6 +1,6 @@
 {% set value = value|default(null) %}
 
-<label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+<label class="label CheckoutForm__Label CheckoutForm__Label--Required JSCheckoutForm__StateProvinceLabel">
     State/Province
     <input
         type="text"
