--- a/templates/_partials/CheckoutStateSelect.twig
+++ b/templates/_partials/CheckoutStateSelect.twig
@@ -7,7 +7,7 @@
     {% endif %}
 {% endfor %}
 
-<label class="label CheckoutForm__Label CheckoutForm__Label--Required">
+<label class="label CheckoutForm__Label CheckoutForm__Label--Required JSCheckoutForm__StateProvinceLabel">
     State
     <select name="stateProvince" class="select CheckoutForm__Select" required>
         <option value="" disabled{% if not hasSelected %} selected{% endif %}>
