Fix a checkout form CSS issue introduced by adding hidden inputs

--- a/assetsSource/css/layout/CheckoutForm/CheckoutForm.1300.pcss
+++ b/assetsSource/css/layout/CheckoutForm/CheckoutForm.1300.pcss
@@ -8,12 +8,12 @@
     position: relative;
 }
 
-.CheckoutForm__Section:first-child {
+.CheckoutForm__Section--FirstSection {
     padding-right: 30px;
     width: 60%;
 }
 
-.CheckoutForm__Section:first-child:after {
+.CheckoutForm__Section--FirstSection:after {
     background-color: var(--lighterGray);
     content: ' ';
     display: block;
@@ -24,7 +24,7 @@
     width: 1px;
 }
 
-.CheckoutForm__Section:last-child {
+.CheckoutForm__Section--SecondSection {
     padding-left: 30px;
     width: 40%;
 }
