--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -47,7 +47,7 @@
                                 name="redirect"
                                 value="/cart"
                             >
-                            <section class="CheckoutForm__Section">
+                            <section class="CheckoutForm__Section CheckoutForm__Section--FirstSection">
                                 <h2 class="CheckoutForm__SectionHeader">Billing</h2>
                                 <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
                                     <label class="label CheckoutForm__Label CheckoutForm__Label--Required">
@@ -154,7 +154,7 @@
                                     >
                                 </label>
                             </section>
-                            <section class="CheckoutForm__Section">
+                            <section class="CheckoutForm__Section CheckoutForm__Section--SecondSection">
                                 <h2 class="CheckoutForm__SectionHeader">Payment</h2>
                                 <div class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
                                     <label class="label CheckoutForm__Label CheckoutForm__Label--Required CheckoutForm__Label--TwoThirds">
