Fix a CSS bug with opacity in MS Edge

--- a/assetsSource/css/layout/Cart/Cart.0000.pcss
+++ b/assetsSource/css/layout/Cart/Cart.0000.pcss
@@ -10,7 +10,7 @@
 
 .Cart__Item,
 .Cart__TotalsListItem {
-    background-color: rgba(var(--green), 30%);
+    background-color: rgba(var(--green), 0.3);
     margin: 0;
     padding: 6px 12px;
     text-align: right;
@@ -18,11 +18,11 @@
 
 .Cart__Item:nth-child(even),
 .Cart__TotalsListItem:nth-child(even) {
-    background-color: rgba(var(--green), 15%);
+    background-color: rgba(var(--green), 0.15);
 }
 
 .Cart__TotalsListItem:last-child {
-    background-color: rgba(var(--green), 5%);
+    background-color: rgba(var(--green), 0.05);
     font-weight: var(--StandardFontBoldWeight);
 }
 
